--- a/compsci/templates/base.html
+++ b/compsci/templates/base.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GCSE & A Level Computer Science Revision</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+
   </head>
-  <body>
-    <div class="menu">
+  <body  style="background-color:#457B9D;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1D3557";>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#">Signup</a>
+            <a class="nav-link" href="#">Login</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container mycontent">
+        {% block content %}
+
+        {% endblock %}
+      </div>
 
 
 
-    </div>
 
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
   </body>
-
-
-
 </html>
