--- a/compsci/templates/index.html
+++ b/compsci/templates/index.html
@@ -1,9 +1,19 @@
 {% extends "base.html"%}
 <!DOCTYPE html>
 {% block content %}
-<div class="row justify-content-md-center">
-   <div class="col-sm">
-     <div class="card" style="width: 18rem;">
+<div class="row justify-content">
+   <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="card" style="width: 25rem;">
+      <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+   </div>
+   <div class="col-lg-4 col-md-12 col-sm-12">
+     <div class="card" style="width: 25rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
@@ -12,18 +22,8 @@
   </div>
 </div>
    </div>
-   <div class="col-sm">
-     <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-   </div>
-   <div class="col-sm">
-     <div class="card" style="width: 18rem;">
+   <div class="col-lg-4 col-md-12 col-sm-12">
+     <div class="card" style="width: 25rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
