--- a/compsci/templates/index.html
+++ b/compsci/templates/index.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="row justify-content mt-auto">
 
-{% for card in object_list %}
+{% for card in homepagetoppost_list %}
    <div class="col-lg-4 col-md-5 col-sm-12 mt-3">
-    <div class="card" style="width: 25rem;  border-radius: 25px;">
-      <img src= "{% static card.upload.url %}" class="card-img-top" alt="...">
+    <div class="card" style="width: 20rem;  border-radius: 25px;">
+      <img src= "{{card.upload.url}}" class="card-img-top" style="width: 5rem"  alt="...">
         <div class="card-body">
           <h5 class="card-title">{{card.title}}</h5>
           <p class="card-text">{{card.message}}</p>
