--- a/compsci/templates/index.html
+++ b/compsci/templates/index.html
@@ -11,6 +11,9 @@
   <div class="row justify-content-center">
     <h2 class="text-center">A level & GCSE Revision Tools.</h2>
   </div>
+  <div class="row justify-content-center">
+  <button class="btn btn-primary" style=" width: 15rem; border-radius: 10px" type="submit">Sign Up</button>
+  </div>
 </div>
 
 
@@ -30,5 +33,21 @@
  </div>
 {% endfor %}
 </div>
+
+{% for image in galleryimages_list %}
+   <div class="col-lg-4 col-md-5 col-sm-12 mt-2">
+    <div class="card" style=" width: 25rem; height: 37rem;  border-radius: 25px; background-color: #cadfed">
+      <img src= "{{image.upload.url}}" class="card-img-top m-3" style="width: 23rem; height: 15rem; border-radius: 25px;"  alt="...">
+   </div>
+ </div>
+{% endfor %}
+</div>
+
+
+
+
+
+
+
 
 {% endblock  %}
