--- a/compsci/templates/base.html
+++ b/compsci/templates/base.html
@@ -14,15 +14,25 @@
   <body  style="background-color:#457B9D;">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1D3557";>
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="{% url "home" %}">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#">Teacher Signup</a>
-            <a class="nav-link" href="#">Student Signup</a>
-            <a class="nav-link" href="#">Login</a>
+
+
+
+            {% if request.user.is_authenticated %}
+              <a class="nav-link" href="{% url "logout" %}"> Logout</a>
+              <a class = "nav-link" href="#">{{request.user.user_name|title}} </a>
+            {% else %}
+                <a class="nav-link" href="{% url "register" %}">Teacher Signup</a>
+                <a class="nav-link" href="#">Student Signup</a>
+                <a class="nav-link" href="{% url "login" %}">Login</a>
+            {%endif%}
+
+
           </div>
         </div>
       </div>
