--- a/compsci/templates/login.html
+++ b/compsci/templates/login.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-<h2>Register</h2>
+<h2>Login</h2>
 
 <form method = "post">{% csrf_token %}
-  {% for field in registration_form %}
+  {% for field in login_form %}
     <p>
       {{field.label_tag}}
       {{field}}
@@ -15,10 +15,15 @@
       {% for error in field.errors %}
         <small style ="color: red;"> {{error}}</small>
       {% endfor %}
+      {% if login_form.non_field_errors %}
+        <div style = "colour: red;">
+          <p>{{login_form.non_field_errors}}
+        </div>
+      {% endif %}
 
     </p>
     {% endfor %}
-    <button type ="submit">Register</button>
+    <button type ="submit">Log in</button>
 </form>
 
 {% endblock content %}
