--- a/compsci/templates/base.html
+++ b/compsci/templates/base.html
@@ -24,8 +24,9 @@
 
 
             {% if request.user.is_authenticated %}
-              <a class="nav-link" href="{% url "logout" %}"> Logout</a>
+              <a class="nav-link" href="{% url "student_home" %}">Topics</a>
               <a class = "nav-link" href="#">{{request.user.user_name|title}} </a>
+              <a class="nav-link" href="{% url "logout" %}"> Logout</a>
             {% else %}
                 <a class="nav-link" href="{% url "register" %}">Teacher Signup</a>
                 <a class="nav-link" href="#">Student Signup</a>
@@ -38,7 +39,7 @@
       </div>
     </nav>
     <div class="container mycontent">
-      
+
         {% block content %}
 
         {% endblock %}
