--- a/compsci/templates/index.html
+++ b/compsci/templates/index.html
@@ -41,7 +41,7 @@
  </div>
 {% endfor %}
 </div>
-
+<div class="row justify-content mt-auto">
 {% for image in galleryimages_list %}
    <div class="col-lg-7 col-md-5 col-sm-12  mt-2">
     <div class="card" style=" width: 25rem; border-radius: 25px; background-color: #cadfed">
