starting to create Quizzes

--- a/compsci/templates/student_home.html
+++ b/compsci/templates/student_home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h1>Topics<span class="badge bg-primary"> Click on a topic you find interesting!</span></h1>
+<h1>Topics<span class="badge bg-primary"> Click on a topic to study!</span></h1>
 
 
 {# <div class="row justify-content mt-auto"> #}
